add full 12 practise