@@ -7,7 +7,7 @@ import hse.kpo.facade.Hse;
 import hse.kpo.factories.cars.HandCarFactory;
 import hse.kpo.factories.cars.PedalCarFactory;
 import hse.kpo.observers.SalesObserver;
-import hse.kpo.storages.CustomerStorage;
+import hse.kpo.services.CustomerService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -28,7 +28,7 @@ class HseTest {
     private Hse hse;
 
     @Autowired
-    private CustomerStorage customerStorage;
+    private CustomerService customerService;
 
     @Autowired
     private PedalCarFactory pedalCarFactory;
@@ -50,8 +50,8 @@ class HseTest {
         hse.sell();
 
         // Assert
-        Customer customer = customerStorage.getCustomers().get(0);
-        Car receivedCar = customer.getCar();
+        Customer customer = customerService.getCustomers().getFirst();
+        Car receivedCar = customer.getCars().getFirst();
 
         assertAll(
                 () -> assertNotNull(receivedCar, "Автомобиль не был назначен")
@@ -69,10 +69,10 @@ class HseTest {
         hse.sell();
 
         // Assert
-        Customer customer = customerStorage.getCustomers().get(0);
+        Customer customer = customerService.getCustomers().getFirst();
 
         assertAll(
-                () -> assertNull(customer.getCar(),
+                () -> assertNull(customer.getCars(),
                         "Клиент не должен был получить автомобиль. Проверьте совместимость двигателя")
         );
     }
@@ -90,15 +90,12 @@ class HseTest {
         hse.sell();
 
         // Assert
-        List<Customer> customers = customerStorage.getCustomers();
+        List<Customer> customers = customerService.getCustomers();
         assertAll(
-                () -> assertNotNull(customers.get(0).getCar(),
+                () -> assertNotNull(customers.get(0).getCars(),
                         "Первый клиент должен получить автомобиль"),
-                () -> assertNotNull(customers.get(1).getCar(),
-                        "Второй клиент должен получить автомобиль"),
-                () -> assertNotEquals(customers.get(0).getCar().getVin(),
-                        customers.get(1).getCar().getVin(),
-                        "VIN автомобилей должны отличаться")
+                () -> assertNotNull(customers.get(1).getCars(),
+                        "Второй клиент должен получить автомобиль")
         );
     }
 
